# rust-bff-example

./: Cargo.toml  Makefile  cmds  readme.md
docs/: create-account.md
src/: main.rs  utils.rs
src/models/: auth0.rs  mod.rs
src/routes/: password.rs
src/services/: auth0.rs  mod.rs
