[package]
name = "rust-lf-login-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = "0.9.3"
chrono = "0.4.38"
dotenv = "0.15.0"
lazy_static = "1.4.0"
once_cell = "1.19.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
sea-orm = { version = "0.12.15", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "sqlx-postgres",
] }
serde = { version = "1.0.201", features = ["derive"] }
serde-email = "3.0.1"
serde_json = "1.0.117"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
